product/standard/rocketmq-pro/rocketmq-ms-cluster-pro/rocketmq-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: inc
spec:
  finalizers:
  - kubernetes
