product/standard/rocketmq-pro/rocketmq-ms-cluster-pro/rocketmq-namesrv-statefulset.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: rocketmq-c4-namesrv-prod-server
  namespace: inc
  labels:
    wayne-app: rocketmq-c4-namesrv-prod
    wayne-ns: inc
    app: rocketmq-c4-namesrv-prod-server
spec:
  serviceName: rocketmq-c4-namesrv-prod-server
  #生产级配置
  #replicas: 2
  #测试用配置
  replicas: 1
  selector:
    matchLabels:
      app: rocketmq-c4-namesrv-prod-server
  template:
    metadata:
      labels:
        wayne-app: rocketmq-c4-namesrv-prod
        wayne-ns: inc
        app: rocketmq-c4-namesrv-prod-server
    spec:
      #生产级配置，生产需要打开。
      #affinity:
      #  podAntiAffinity:
      #    preferredDuringSchedulingIgnoredDuringExecution:
      #      - weight: 100
      #        podAffinityTerm:
      #          topologyKey: kubernetes.io/hostname
      #          labelSelector:
      #            matchLabels:
      #              app: rocketmq-c4-namesrv-prod-server
      #  nodeAffinity:
      #    preferredDuringSchedulingIgnoredDuringExecution:
      #      - weight: 100
      #        preference:
      #          matchExpressions:
      #            - key: failure-domain.beta.kubernetes.io/zone
      #              operator: In
      #              values:
      #                - cn-beijing-c
      containers:
        - name: rocketmq-nameserver
          image: 'hpy253215039/rocketmq-offical:4.3.2'
          command:
            - sh
            - mqnamesrv
          imagePullPolicy: Always
          ports:
            - containerPort: 9876
          volumeMounts:
            - mountPath: /data/rocketmq
              name: rocketmq-c4-namesrv
          resources:
            #生产级资源
            #limits:
            #  cpu: '1'
            #  memory: 4Gi
            #requests:
            #  memory: 4Gi
            #  cpu: '1'
            #测试用配置
            limits:
              cpu: '1'
              memory: 4Gi
            requests:
              memory: 4Gi
              cpu: '0.1'
      #镜像仓库秘钥，生产环境配置
      #imagePullSecrets:
      #  - name: inc
  volumeClaimTemplates:
    - metadata:
        name: rocketmq-c4-namesrv
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: rocketmq-c4-namesrv
        resources:
          requests:
            storage: 20Gi
  updateStrategy:
    type: RollingUpdate
