product/standard/rocketmq-pro/rocketmq-ms-cluster-pro/rocketmq-console-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketmq-c4-console-prod-server
  namespace: inc
  labels:
    wayne-app: rocketmq-c4-console-prod
    wayne-ns: inc
    app: rocketmq-c4-console-prod-server
spec:
  selector:
    app: rocketmq-c4-console-prod-server
  ports:
    - port: 8080
      targetPort: 8080
      name: rocketmq-c4-console-prod-server-8080
  type: ClusterIP
  clusterIP: None
  sessionAffinity: ClientIP
